# plonky2-mobile

./: .gitignore  Cargo.toml
.github/workflows/: build-and-test.yml
android/app/src/main/java/com/mopro/mopro_app/: FibonacciComponent.kt
ios/mopro-test/: ContentView.swift
ios/mopro-test.xcodeproj/: project.pbxproj
plonky2-fibonacci/src/: lib.rs
src/: lib.rs  mopro.udl  plonky2_fibonacci.rs
tests/bindings/: test_plonky2_fibonacci.kts  test_plonky2_fibonacci.swift
